--- a/roles/backup_select_resources/tasks/main.yaml
+++ b/roles/backup_select_resources/tasks/main.yaml
@@ -17,22 +17,22 @@
       amazon.aws.backup_plan_info:
         backup_plan_names:
           - "{{ plan_name }}"
-      register: backup_plan_info
+      register: backup_select_resources_backup_plan_info
 
     - name: Fail when backup plan does not exist
       ansible.builtin.fail:
         msg: Backup plan {{ plan_name }} does not exist, please create or confirm plan name is correct.
-      when: backup_plan_info.backup_plans | length == 0
+      when: backup_select_resources_backup_plan_info.backup_plans | length == 0
 
     - name: Get provided IAM role info
       community.aws.iam_role_info:
         name: "{{ backup_role_name }}"
-      register: role_info
+      register: backup_select_resources_role_info
 
     - name: Create new role when IAM role does not exist
       block:
         - name: Create role
-          when: role_info.iam_roles | length == 0
+          when: backup_select_resources_role_info.iam_roles | length == 0
           community.aws.iam_role:
             name: "{{ backup_role_name }}"
             state: present
@@ -42,7 +42,7 @@
             managed_policy:
               - arn:aws:iam::aws:policy/service-role/AWSBackupServiceRolePolicyForBackup
             wait: true
-          register: new_role_info
+          register: backup_select_resources_new_role_info
 
         - name: Wait for role to be created
           ansible.builtin.pause:
@@ -50,26 +50,26 @@
 
     - name: Set backup role ARN
       ansible.builtin.set_fact:
-        backup_role_arn: "{{ role_info.iam_roles[0].arn if new_role_info is skipped else new_role_info.arn }}"
+        backup_select_resources_backup_role_arn: "{{ backup_select_resources_role_info.iam_roles[0].arn if backup_select_resources_new_role_info is skipped else backup_select_resources_new_role_info.arn }}"
 
     - name: Create or update backup selection
       amazon.aws.backup_selection:
         state: present
         backup_plan_name: "{{ plan_name }}"
         selection_name: "{{ selection_name }}"
-        iam_role_arn: "{{ backup_role_arn }}"
+        iam_role_arn: "{{ backup_select_resources_backup_role_arn }}"
         resources: "{{ selection_resources }}"
         list_of_tags: "{{ selection_tags | default(omit) }}"
         not_resources: "{{ selection_excluded_resources | default(omit) }}"
         conditions: "{{ selection_conditions | default(omit) }}"
-      register: selection_result
+      register: backup_select_resources_selection_result
 
     - name: Verify that selection has been created/updated
       ansible.builtin.debug:
         msg: Backup selection '{{ selection_name }}' successfully created/updated.
-      when: selection_result is changed
+      when: backup_select_resources_selection_result is changed
 
     - name: Verify that selection already exists
       ansible.builtin.debug:
         msg: Backup selection '{{ selection_name }}' exists, no updates needed.
-      when: selection_result is not changed
+      when: backup_select_resources_selection_result is not changed
