--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -68,6 +68,10 @@ jobs:
             {
               "ansible-version": "devel",
               "python-version": "3.8"
+            },
+            {
+              "ansible-version": "devel",
+              "python-version": "3.9"
             }
           ]
   all_green:
