--- a/roles/manage_transit_gateway/tasks/create.yaml
+++ b/roles/manage_transit_gateway/tasks/create.yaml
@@ -9,20 +9,21 @@
         description: "{{ transit_gateway.description }}"
         asn: "{{ transit_gateway.asn }}"
         tags: "{{ transit_gateway.tags }}"
-      register: tgw_result
+      register: manage_transit_gateway_tgw_result
 
     - name: Verify that transit gateway has been created/updated
       ansible.builtin.debug:
         msg: Transit Gateway successfully created/updated.
-      when: tgw_result.changed
+      when: manage_transit_gateway_tgw_result.changed
 
-    - ansible.builtin.debug:
-        msg: Transit Gateway '{{ tgw_result.transit_gateway.transit_gateway_id }}' exists, no updates needed.
-      when: not tgw_result.changed
+    - name: Print debug msg
+      ansible.builtin.debug:
+        msg: Transit Gateway '{{ manage_transit_gateway_tgw_result.transit_gateway.transit_gateway_id }}' exists, no updates needed.
+      when: not manage_transit_gateway_tgw_result.changed
 
     - name: Create VPC attachment
-      include_tasks: create_vpc_attachment.yaml
+      ansible.builtin.include_tasks: create_vpc_attachment.yaml
       loop: "{{ vpc_attachment }}"
       vars:
-        tgw_info: "{{ tgw_result }}"
+        manage_transit_gateway_tgw_info: "{{ manage_transit_gateway_tgw_result }}"
       when: vars["vpc_attachment"] is defined
