--- a/tests/integration/targets/test_manage_transit_gateway/tasks/cleanup.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/cleanup.yml
@@ -1,6 +1,6 @@
 ---
 - name: 'Delete subnets'
-  ec2_vpc_subnet:
+  amazon.aws.ec2_vpc_subnet:
     state: absent
     cidr: '{{ item.cidr }}'
     vpc_id: '{{ item.vpc_id }}'
@@ -12,7 +12,7 @@
   ignore_errors: True
 
 - name: 'Delete'
-  ec2_vpc_net:
+  amazon.aws.ec2_vpc_net:
     state: absent
     cidr_block: '{{ item.cidr }}'
     name: '{{ item.name }}'
