--- a/tests/integration/targets/test_manage_transit_gateway/tasks/setup.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/setup.yml
@@ -1,11 +1,11 @@
 ---
 - name: 'Pick 2 AZs available for use'
-  set_fact:
+  ansible.builtin.set_fact:
     subnet_az_a_1: '{{ ec2_availability_zone_names[0] }}'
     subnet_az_b_1: '{{ ec2_availability_zone_names[0] }}'
 
 - name: 'Create VPCs to attach to TGW'
-  ec2_vpc_net:
+  amazon.aws.ec2_vpc_net:
     cidr_block: '{{ item.cidr }}'
     name: '{{ item.name }}'
     ipv6_cidr: True
@@ -16,7 +16,9 @@
     name: '{{ vpc_name_b }}'
   register: create_vpcs
 
-- set_fact:
+
+- name: 'Set facts'
+  ansible.builtin.set_fact:
     vpc_id_a: '{{ vpc_a.id }}'
     vpc_id_b: '{{ vpc_b.id }}'
     vpc_owner_a: '{{ vpc_a.owner_id }}'
@@ -26,7 +28,7 @@
     vpc_b: '{{ create_vpcs.results[1].vpc }}'
 
 - name: 'Create subnets'
-  ec2_vpc_subnet:
+  amazon.aws.ec2_vpc_subnet:
     az: '{{ item.az }}'
     cidr: '{{ item.cidr }}'
     tags:
@@ -43,6 +45,8 @@
     name: '{{ subnet_name_b_1 }}'
   register: create_subnets
 
-- set_fact:
+
+- name: 'Set facts'
+  ansible.builtin.set_fact:
     subnet_id_a_1: '{{ create_subnets.results[0].subnet.id }}'
     subnet_id_b_1: '{{ create_subnets.results[3].subnet.id }}'
