--- a/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
@@ -10,7 +10,7 @@
           asn: 5200000000
           description: "TGW for Cloud team"
           tags:
-            "Name": "{{ tgw_name }}"
+            "Name": "{{ manage_transit_gateway_tgw_name }}"
         vpc_attachment:
           - name: "vpc-attachment-001"
             tags:
@@ -25,29 +25,29 @@
 
     - name: List all the transit gateway attachments
       community.aws.ec2_transit_gateway_info:
-      register: gw_info
+      register: manage_transit_gateway_gw_info
 
     - name: Get the transit gateway with the given description
-      set_fact:
+      ansible.builtin.set_fact:
         gw: "{{ item }}"
       when:
         - item.description == "{{ transit_gateway.description }}"
         - item.state == "available"
-      loop: "{{ gw_info.transit_gateways }}"
+      loop: "{{ manage_transit_gateway_gw_info.transit_gateways }}"
 
     - name: Describe attachments on a specific VPC
-      community.aws.ec2_transit_gateway_vpc_attachment_info:
+      community.aws.ec2_transit_gateway_vpc_manage_transit_gateway_attachment_info:
         filters:
           transit-gateway-id: '{{ gw.transit_gateway_id }}'
-      register: attachment_info
+      register: manage_transit_gateway_attachment_info
 
     - name: Ensure that the transit gateway attachments are created as expected
       ansible.builtin.assert:
         that:
-          - attachment_info.attachments | length == 2
-          - subnet_id_a_1 in attachment_info.attachments
-          - subnet_id_b_1 in attachment_info.attachments
-          - tgw_name in attachment_info.attachments
+          - manage_transit_gateway_attachment_info.attachments | length == 2
+          - subnet_id_a_1 in manage_transit_gateway_attachment_info.attachments
+          - subnet_id_b_1 in manage_transit_gateway_attachment_info.attachments
+          - manage_transit_gateway_tgw_name in manage_transit_gateway_attachment_info.attachments
 
   always:
     # Deletion
@@ -60,7 +60,7 @@
           asn: 5200000000
           description: "TGW for Cloud team"
           tags:
-            "Name": "{{ tgw_name }}"
+            "Name": "{{ manage_transit_gateway_tgw_name }}"
         vpc_attachment:
           - name: "vpc-attachment-001"
             tags:
