--- a/roles/manage_transit_gateway/tasks/main.yaml
+++ b/roles/manage_transit_gateway/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Run manage transit gateway role
   module_defaults:
-    group/aws: "{{ aws_role_credentials }}"
+    group/aws: "{{ aws_setup_credentials__output }}"
 
   block:
     - name: Include file
