--- a/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
@@ -4,7 +4,7 @@
     # Creation
     - name: Create Transit Gateway with VPC attachemnt
       ansible.builtin.include_role:
-        name: cloud.aws_ops.awsconfig_multiregion_cloudtrail
+        name: cloud.aws_ops.manage_transit_gateway
       vars:
         transit_gateway:
           asn: 5200000000
@@ -31,7 +31,7 @@
       ansible.builtin.set_fact:
         gw: "{{ item }}"
       when:
-        - item.description == "{{ transit_gateway.description }}"
+        - item.description == transit_gateway.description
         - item.state == "available"
       loop: "{{ manage_transit_gateway_gw_info.transit_gateways }}"
 
@@ -51,9 +51,9 @@
 
   always:
     # Deletion
-    - name: Create Transit Gateway with VPC attachemnt
+    - name: Delete Transit Gateway with VPC attachemnt
       ansible.builtin.include_role:
-        name: cloud.aws_ops.awsconfig_multiregion_cloudtrail
+        name: cloud.aws_ops.manage_transit_gateway
       vars:
         action: "delete"
         transit_gateway:
