fix integration tests

--- a/tests/integration/targets/test_manage_vpc_peering/defaults/main.yml
+++ b/tests/integration/targets/test_manage_vpc_peering/defaults/main.yml
@@ -1,10 +1,11 @@
 ---
 # defaults file for manage_vpc_peering role
+aws_security_token: '{{ security_token | default(omit) }}'
 
 test_vpc_name_1_1: role_test_vpc_1_1
 test_vpc_name_1_2: role_test_vpc_1_2
-test_vpc_name_2: role_test_vpc_2
+# test_vpc_name_2: role_test_vpc_2
 
 test_vpc_cidr_1_1: 172.10.0.0/16
 test_vpc_cidr_1_2: 192.168.0.0/28
-test_vpc_cidr_2_1: 192.168.64.0/26
+# test_vpc_cidr_2_1: 192.168.64.0/26
