--- a/roles/manage_vpc_peering/tasks/main.yaml
+++ b/roles/manage_vpc_peering/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Run 'manage_vpc_peering' role
   module_defaults:
-    group/aws: "{{ aws_role_credentials }}"
+    group/aws: "{{ aws_setup_credentials__output }}"
 
   block:
     - name: Include file
