--- a/tests/integration/targets/test_manage_vpc_peering/tasks/main.yml
+++ b/tests/integration/targets/test_manage_vpc_peering/tasks/main.yml
@@ -16,37 +16,38 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.manage_vpc_peering
       vars:
-        requester_vpc: "{{ eu_central_1_vpc_1.vpc.id }}"
-        accepter_vpc: "{{ eu_central_1_vpc_2.vpc.id }}"
-        region: eu-central-1
+        requester_vpc: "{{ us_east_1_vpc_1.vpc.id }}"
+        accepter_vpc: "{{ us_east_1_vpc_2.vpc.id }}"
+        region: us-east-1
         vpc_peering_operation: create
 
     - name: Delete VPC peering connection req
       ansible.builtin.include_role:
         name: cloud.aws_ops.manage_vpc_peering
       vars:
-        region: eu-central-1
+        region: us-east-1
         vpc_peering_conn_id: "{{ manage_vpc_peering_req_id }}"
         vpc_peering_operation: delete
 
+    # NOTE: Tests for cross-region vpc peering skipped as CI permissions are restricted to us-east-1 only
     #  VPC Peering (cross region)
-    - name: Create VPC peering (cross region)
-      ansible.builtin.include_role:
-        name: cloud.aws_ops.manage_vpc_peering
-      vars:
-        region: eu-central-1
-        accepter_vpc_region: us-west-1
-        requester_vpc: "{{ eu_central_1_vpc_1.vpc.id }}"
-        accepter_vpc: "{{ us_west_1_vpc_1.vpc.id }}"
-        vpc_peering_operation: create
+    # - name: Create VPC peering (cross region)
+    #   ansible.builtin.include_role:
+    #     name: cloud.aws_ops.manage_vpc_peering
+    #   vars:
+    #     region: us-east-1
+    #     accepter_vpc_region: us-west-1
+    #     requester_vpc: "{{ us_east_1_vpc_1.vpc.id }}"
+    #     accepter_vpc: "{{ us_west_1_vpc_1.vpc.id }}"
+    #     vpc_peering_operation: create
 
-    - name: Delete VPC peering connection req
-      ansible.builtin.include_role:
-        name: cloud.aws_ops.manage_vpc_peering
-      vars:
-        region: eu-central-1
-        vpc_peering_conn_id: "{{ manage_vpc_peering_req_id }}"
-        vpc_peering_operation: delete
+    # - name: Delete VPC peering connection req
+    #   ansible.builtin.include_role:
+    #     name: cloud.aws_ops.manage_vpc_peering
+    #   vars:
+    #     region: us-east-1
+    #     vpc_peering_conn_id: "{{ manage_vpc_peering_req_id }}"
+    #     vpc_peering_operation: delete
 
   always:
     - name: Include 'teardown.yml' file
