--- a/roles/manage_transit_gateway/tasks/create.yaml
+++ b/roles/manage_transit_gateway/tasks/create.yaml
@@ -23,5 +23,8 @@
       when: vars["vpc_attachment"] is defined
       ansible.builtin.include_tasks: create_vpc_attachment.yaml
       loop: "{{ vpc_attachment }}"
-      vars:
-        manage_transit_gateway_tgw_info: "{{ manage_transit_gateway_tgw_result }}"
+
+    - name: Create VPN attachment
+      when: vars["vpn_attachment"] is defined
+      ansible.builtin.include_tasks: create_vpn_attachment.yaml
+      loop: "{{ vpn_attachment }}"
