--- a/tests/integration/targets/test_manage_transit_gateway/tasks/cleanup.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/cleanup.yml
@@ -1,4 +1,27 @@
 ---
+- name: Delete Transit Gateway with VPC/VPC attachemnts
+  ansible.builtin.include_role:
+    name: cloud.aws_ops.manage_transit_gateway
+  vars:
+    action: "delete"
+    transit_gateway:
+      asn: 5200000000
+      description: "TGW for Cloud team"
+      tags:
+        "Name": "{{ manage_transit_gateway_tgw_name }}"
+
+- name: 'Delete Custome GW'
+  community.aws.ec2_customer_gateway:
+    state: absent
+    ip_address: 1.2.3.4
+    name: testcgw
+    bgp_asn: 12345
+  register: manage_transit_gateway_del_result
+  retries: 10
+  delay: 3
+  until: manage_transit_gateway_del_result is not failed
+  ignore_errors: true
+
 - name: 'Delete subnets'
   amazon.aws.ec2_vpc_subnet:
     state: absent
@@ -11,7 +34,7 @@
     vpc_id: '{{ vpc_id_b }}'
   ignore_errors: True
 
-- name: 'Delete'
+- name: 'Delete VPC'
   amazon.aws.ec2_vpc_net:
     state: absent
     cidr_block: '{{ item.cidr }}'
