--- a/tests/integration/targets/test_manage_transit_gateway/tasks/setup.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/setup.yml
@@ -50,3 +50,14 @@
   ansible.builtin.set_fact:
     subnet_id_a_1: '{{ create_subnets.results[0].subnet.id }}'
     subnet_id_b_1: '{{ create_subnets.results[3].subnet.id }}'
+
+- name: create customer gateway
+  community.aws.ec2_customer_gateway:
+    bgp_asn: 12345
+    ip_address: 1.2.3.4
+    name: testcgw
+  register: cgw
+
+- name: 'Set facts'
+  ansible.builtin.set_fact:
+    customer_gw_id: '{{ cgw.gateway.customer_gateway.customer_gateway_id }}'
