--- a/roles/moving_objects_between_buckets/tasks/main.yml
+++ b/roles/moving_objects_between_buckets/tasks/main.yml
@@ -6,12 +6,9 @@
   block:
     - name: Obtaining all the source bucket objects
       amazon.aws.s3_object:
-        bucket: "{{ moving_buckets_src }}"
+        bucket: "{{ moving_bucket_src }}"
         mode: list
       register: bucket_src_info
-    
-    - debug:
-        var: bucket_src_info
 
     # Moving objects between buckets
     - name: Copy an object already stored in another bucket
@@ -20,13 +17,13 @@
         object: "{{ item }}"
         mode: copy
         copy_src:
-            bucket: "{{ moving_buckets_src }}"
+            bucket: "{{ moving_bucket_src }}"
             object: "{{ item }}"
       loop: "{{ bucket_src_info.s3_keys }}"
 
     - name: Delete the source bucket objects
       amazon.aws.s3_object:
-        bucket: "{{ moving_buckets_src }}"
+        bucket: "{{ moving_bucket_src }}"
         object: "{{ item }}"
         mode: delobj 
       loop: "{{ bucket_src_info.s3_keys }}"
