--- a/playbooks/webapp/tasks/create.yaml
+++ b/playbooks/webapp/tasks/create.yaml
@@ -43,6 +43,10 @@
       ansible.builtin.set_fact:
         shared_az: "{{ region_av_zones[0] }}"
 
+    - name: Print the value of Subnet_cidr
+      ansible.builtin.debug:
+        msg: "{{ subnet_cidr }}"
+
     - name: Create a public subnet for bastion
       amazon.aws.ec2_vpc_subnet:
         vpc_id: "{{ vpc.vpc.id }}"
