--- a/roles/moving_objects_between_buckets/tasks/main.yml
+++ b/roles/moving_objects_between_buckets/tasks/main.yml
@@ -4,25 +4,28 @@
     group/aws: "{{ aws_setup_credentials__output }}"
 
   block:
+    # Obtaining specifc or all the source bucket objects
     - name: Obtaining all the source bucket objects
       amazon.aws.s3_object:
-        bucket: "{{ moving_bucket_src }}"
+        bucket: "{{ source_bucket }}"
         mode: list
-      register: bucket_src_info
+        prefix: "{{ source_bucket_object_prefix | default('') }}"
+      register: source_bucket_info
 
+    # Transferring objects from source bucket to destination bucket
     - name: Moving objects between source bucket to destination bucket
       amazon.aws.s3_object:
-        bucket: "{{ moving_bucket_dest }}"
+        bucket: "{{ dest_bucket }}"
         object: "{{ item }}"
         mode: copy
         copy_src:
-            bucket: "{{ moving_bucket_src }}"
+            bucket: "{{ source_bucket }}"
             object: "{{ item }}"
-      loop: "{{ bucket_src_info.s3_keys }}"
+      loop: "{{ source_bucket_info.s3_keys }}"
 
     - name: Delete the source bucket objects
       amazon.aws.s3_object:
-        bucket: "{{ moving_bucket_src }}"
+        bucket: "{{ source_bucket }}"
         object: "{{ item }}"
         mode: delobj 
-      loop: "{{ bucket_src_info.s3_keys }}"
+      loop: "{{ source_bucket_info.s3_keys }}"
