--- a/playbooks/webapp/tasks/deploy_app.yaml
+++ b/playbooks/webapp/tasks/deploy_app.yaml
@@ -31,8 +31,8 @@
 - name: Create Cloud Resources (workers, load balancer, etc)
   module_defaults:
     group/aws:
-      aws_access_key: "{{ aws_access_key }}"
-      aws_secret_key: "{{ aws_secret_key }}"
+      aws_access_key: "{{ aws_access_key | default(omit) }}"
+      aws_secret_key: "{{ aws_secret_key | default(omit) }}"
       security_token: "{{ security_token | default(omit) }}"
       region: "{{ region | default(aws_region) }}"
 
