--- a/tests/integration/targets/test_moving_objects_between_buckets/defaults/main.yml
+++ b/tests/integration/targets/test_moving_objects_between_buckets/defaults/main.yml
@@ -1,5 +1,4 @@
 ---
 # defaults file for tests/integration/targets/test_moving_objects_between_buckets
-bucket_name_src: '{{ resource_prefix | hash("md5") }}-src'
-bucket_name_dest: '{{ resource_prefix | hash("md5") }}-dest'
+bucket_name: '{{ resource_prefix | hash("md5") }}'
 aws_security_token: '{{ security_token | default(omit) }}'
