--- a/tests/integration/targets/test_moving_objects_between_buckets/tasks/main.yml
+++ b/tests/integration/targets/test_moving_objects_between_buckets/tasks/main.yml
@@ -9,28 +9,35 @@
       region: "{{ aws_region }}"
 
   block:
-  #   # Create s3 buckets ====================================================================
+    # Define source bucket and destination bucket ==========================================
+    - name: Define bucket name used for tests
+      set_fact:
+        bucket:
+          src: "{{ bucket_name }}-src"
+          dest: "{{ bucket_name }}-dest"
+
+    # Create s3 buckets ====================================================================
     - name: Create source s3 bucket
       amazon.aws.s3_bucket:
-        name: "{{ bucket_name_src }}"
+        name: "{{ bucket.src }}"
         state: present
 
     - name: Create destination s3 bucket
       amazon.aws.s3_bucket:
-        name: "{{ bucket_name_dest }}"
+        name: "{{ bucket.dest }}"
         state: present
 
     # Put objects into s3 source buckets ===================================================
     - name: Put object (text) in source bucket
       amazon.aws.s3_object:
-        bucket: "{{ bucket_name_src }}"
+        bucket: "{{ bucket.src }}"
         object: /template/test.txt
         content: "{{ lookup('file', 'test.txt') }}"
         mode: put
 
     - name: Put object (python) in source bucket
       amazon.aws.s3_object:
-        bucket: "{{ bucket_name_src }}"
+        bucket: "{{ bucket.src }}"
         object: test.py
         content: "{{ lookup('file', 'test.py') }}"
         mode: put
@@ -41,7 +48,7 @@
 
     - name: Put object (image) in source s3 bucket
       amazon.aws.s3_object:
-        bucket: "{{ bucket_name_src }}"
+        bucket: "{{ bucket.src }}"
         object: put-binary.bin
         content_base64: "{{ put_binary.content }}"
         mode: put
@@ -51,13 +58,13 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.moving_objects_between_buckets
       vars:
-        source_bucket: "{{ bucket_name_src }}"
-        dest_bucket: "{{ bucket_name_dest }}"
-        source_bucket_object_prefix: "template"
+        source_bucket: "{{ bucket.src }}"
+        dest_bucket: "{{ bucket.dest }}"
+        key_prefix: "template"
 
     - name: Obtaining source bucket
       amazon.aws.s3_object:
-        bucket: "{{ bucket_name_src }}"
+        bucket: "{{ bucket.src }}"
         mode: list
       register: bucket_src_info
 
@@ -69,7 +76,7 @@
         
     - name: Obtaining destination bucket
       amazon.aws.s3_object:
-        bucket: "{{ bucket_name_dest }}"
+        bucket: "{{ bucket.dest }}"
         mode: list
       register: bucket_dest_info
 
@@ -83,12 +90,12 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.moving_objects_between_buckets
       vars:
-        source_bucket: "{{ bucket_name_src }}"
-        dest_bucket: "{{ bucket_name_dest }}"
+        source_bucket: "{{ bucket.src }}"
+        dest_bucket: "{{ bucket.dest }}"
 
     - name: Obtaining source bucket
       amazon.aws.s3_object:
-        bucket: "{{ bucket_name_src }}"
+        bucket: "{{ bucket.src }}"
         mode: list
       register: bucket_src_info
 
@@ -99,7 +106,7 @@
         
     - name: Obtaining destination bucket
       amazon.aws.s3_object:
-        bucket: "{{ bucket_name_dest }}"
+        bucket: "{{ bucket.dest }}"
         mode: list
       register: bucket_dest_info
 
@@ -114,11 +121,14 @@
     # Clean up starts here =================================================================
     - name: Delete source s3 bucket
       amazon.aws.s3_bucket:
-        name: "{{ bucket_name_src }}"
+        name: "{{ bucket.src }}"
         state: absent
+        force: true
+      ignore_errors: true
 
     - name: Delete destination s3 bucket
       amazon.aws.s3_bucket:
-        name: "{{ bucket_name_dest }}"
+        name: "{{ bucket.dest }}"
         state: absent
         force: true
+      ignore_errors: true
