--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -6,15 +6,11 @@ on:
       - opened
       - reopened
       - synchronize
+      - unlabeled
 
 jobs:
-  safe-to-test:
-    if: ${{ github.event.label.name == 'safe to test' }} || ${{ github.event.action != 'labeled' }}
-    uses: abikouo/github_actions/.github/workflows/safe-to-test.yml@safe_to_test_v2
   splitter:
     runs-on: ubuntu-latest
-    needs:
-      - safe-to-test
     env:
       source_dir: "cloud_awsops"
     outputs:
@@ -29,7 +25,7 @@ jobs:
 
       - name: List changes for pull request
         id: splitter
-        uses: abikouo/github_actions/.github/actions/ansible_test_splitter@splitter_for_roles
+        uses: ansible-network/github_actions/.github/actions/ansible_test_splitter@main
         with:
           collections_to_test: ${{ env.source_dir }}
           total_jobs: 4
