added delete_empty_source_bucket variable

--- a/roles/moving_objects_between_buckets/tasks/main.yml
+++ b/roles/moving_objects_between_buckets/tasks/main.yml
@@ -40,3 +40,10 @@
         object: "{{ item }}"
         mode: delobj 
       loop: "{{ source_bucket_info.s3_keys }}"
+    
+    # Delete source s3 bucket when empty
+    - name: Delete source s3 bucket when empty
+      amazon.aws.s3_bucket:
+        name: "{{ source_bucket }}"
+        state: absent
+      when: "{{ delete_empty_source_bucket | default(false) }}"
