--- a/tests/integration/targets/test_moving_objects_between_buckets/tasks/main.yml
+++ b/tests/integration/targets/test_moving_objects_between_buckets/tasks/main.yml
@@ -117,6 +117,26 @@
         - "bucket_dest_info.s3_keys[1] in ['put-binary.bin','template/test.txt', 'test.py']"
         - "bucket_dest_info.s3_keys[2] in ['put-binary.bin','template/test.txt', 'test.py']"
 
+    # Delete source s3 bucket when empty ===================================================
+    - name: Delete source s3 bucket when empty
+      ansible.builtin.include_role:
+        name: cloud.aws_ops.moving_objects_between_buckets
+      vars:
+        source_bucket: "{{ bucket.src }}"
+        dest_bucket: "{{ bucket.dest }}"
+        delete_empty_source_bucket: True
+
+    - name: Obtaining source bucket
+      amazon.aws.s3_object:
+        bucket: "{{ bucket.src }}"
+        mode: list
+      register: bucket_src_info
+      ignore_errors: true
+    
+    - name: Check the destination s3 bucket received all objects
+      ansible.builtin.assert:
+        that: bucket_src_info is failed
+
   always:
     # Clean up starts here =================================================================
     - name: Delete source s3 bucket
